--- a/houseWork/src/main/resources/application.properties
+++ b/houseWork/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
-server.contextPath=/
-spring.datasource.url=jdbc:mysql://localhost:3306/quality
+server.servlet.context-path=/
+spring.datasource.url=jdbc:mysql://localhost:3306/houseWork
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -8,8 +8,6 @@ spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
-
-security.basic.enabled=false
 
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
@@ -27,13 +25,11 @@ spring.redis.host=localhost
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
 spring.redis.password=
-# 连接池最大连接数（使用负值表示没有限制）
-spring.redis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.pool.max-wait=-1
+spring.redis.jedis.pool.max-wait=
 # 连接池中的最大空闲连接
-spring.redis.pool.max-idle=8
+spring.redis.jedis.pool.max-idle=8
 # 连接池中的最小空闲连接
-spring.redis.pool.min-idle=0
+spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
