--- a/houseWork/src/main/resources/application.properties
+++ b/houseWork/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8080
 server.servlet.context-path=/
 spring.datasource.url=jdbc:mysql://localhost:3306/houseWork
 spring.datasource.username=root
-#spring.datasource.password=123456789
-spring.datasource.password=yamiedie
+spring.datasource.password=123456789
+#spring.datasource.password=yamiedie
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
