--- a/houseWork/src/main/resources/application.properties
+++ b/houseWork/src/main/resources/application.properties
@@ -18,20 +18,20 @@ spring.thymeleaf.enabled=false
 #mybatis
 mybatis.mapper-locations=classpath\:mapper/*/*.xml
 # REDIS (RedisProperties)
-# Redis数据库索引（默认为0）
+# Redis
 spring.redis.database=0
-# Redis服务器地址
+# Redis
 spring.redis.host=localhost
-# Redis服务器连接端口
+# Redis
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
+# Redis
 spring.redis.password=
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
+# 
 spring.redis.jedis.pool.max-wait=
-# 连接池中的最大空闲连接
+# 
 spring.redis.jedis.pool.max-idle=8
-# 连接池中的最小空闲连接
+#
 spring.redis.jedis.pool.min-idle=0
-# 连接超时时间（毫秒）
+# 
 spring.redis.timeout=5000
 
