--- a/houseWork/src/main/resources/application.properties
+++ b/houseWork/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8080
 server.servlet.context-path=/
-spring.datasource.url=jdbc:mysql://localhost:3306/houseWork
+spring.datasource.url=jdbc:mysql://localhost:3306/housework
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=518385
+#spring.datasource.password=123456789
 #spring.datasource.password=yamiedie
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
