--- a/houseWork/pom.xml
+++ b/houseWork/pom.xml
@@ -115,6 +115,11 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.caspar-chen</groupId>
+            <artifactId>swagger-ui-layer</artifactId>
+            <version>1.1.2</version>
+        </dependency>
 
         <!--工具包-->
         <dependency>
