--- a/houseWork/pom.xml
+++ b/houseWork/pom.xml
@@ -7,7 +7,7 @@
     <packaging>war</packaging>
     <name>houseWork</name>
     <url>http://maven.apache.org</url>
-    <!-- spring boot jar -->
+    <!-- spring boot war -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
