--- a/houseWork/src/main/resources/application.properties
+++ b/houseWork/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 
+spring.jmx.enabled=false
+
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
 spring.thymeleaf.cache=false
