--- a/houseWork/pom.xml
+++ b/houseWork/pom.xml
@@ -223,7 +223,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.54</version>
         </dependency>
-
+		<dependency>
+		    <groupId>cn.hutool</groupId>
+		    <artifactId>hutool-all</artifactId>
+		    <version>4.0.12</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
