--- a/houseWork/src/main/resources/application.properties
+++ b/houseWork/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 server.servlet.context-path=/
-spring.datasource.url=jdbc:mysql://47.74.191.135:3306/housework?useUnicode=true&characterEncoding=utf8&autoReconnect=true&stringtype=unspecified
+spring.datasource.url=jdbc:mysql://49.234.155.218:3306/houseWork?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=518385
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
